@@ -35,4 +35,4 @@ Imports:
     aplpack,
 		tkrplot
 License: GPL (>= 2)
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
