@@ -1,11 +1,13 @@
 ## Test environments
 * local OS X install, R 3.5.1
-* Ubuntu 14.04.5 (on travis-ci), R 3.4.4
 * Win-builder
-* r-patched 
+* Travis-CI / Github: 
+	* oldrel: passed
+	* release: passed
+	* devel: failed, because a dependency was not available on R-devel (tcltk)
 
 ## R CMD check results
-There were no ERRORs, WARNINGs, or relevant NOTEs. 
+There were no ERRORs, WARNINGs, or relevant NOTEs on oldrel and release.
 
 ## Downstream dependencies
 None.
